# HairRemoval

./: .gitignore  CMakeLists.txt  HairRemoval.cpp  HairRemoval.h  README.md  Source.cpp
HairRemoval/: Source.cpp  cuda_error.cuh  entropyThreshold.cu  entropyThreshold.cuh  entropy_thresholding.cpp  entropy_thresholding.cu  entropy_thresholding.cuh  entropy_thresholding.h  fft_convolution.cu  fft_convolution.cuh  hairRemoval.cu  hairRemoval.cuh  hairRemovalEngine.cu  hairRemovalEngine.cuh  hairRemovalMain.cu  hairRemovalStruct.h  hair_detection_CPU.cpp  hair_detection_CPU.h  hair_detection_GPU.cu  hair_detection_GPU.cuh  hair_detection_main.cpp  hair_detection_main.h  hair_inpainting_CPU.cpp  hair_inpainting_CPU.h  hair_inpainting_GPU.cu  hair_inpainting_GPU.cuh  parameters.h  parameters_GPU.cuh  timer.cuh  utils.h  warmup.cuh
hair_detection/: Source.cpp  entropy_thresholding.cpp  entropy_thresholding.cu  entropy_thresholding.cuh  entropy_thresholding.h  fft_convolution.cu  fft_convolution.cuh  filtering.cu  filtering.cuh  hair_detection.cpp  hair_detection.cu  hair_detection.h  hair_detection_CPU.cpp  hair_detection_CPU.h  hair_detection_GPU.cu  hair_detection_GPU.cuh  hair_detection_kernel.cuh  hair_detection_main.cpp  hair_detection_main.h  hair_inpainting_CPU.cpp  hair_inpainting_CPU.h  hair_inpainting_GPU.cu  hair_inpainting_GPU.cuh  parameters.h  utils.h
